<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/topImageView"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mask"
            android:foreground="@drawable/list_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginTop="222dp"
            android:layout_marginBottom="52dp"
            android:fontFamily="sans-serif"
            android:lineHeight="14sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/age_above_13"
            android:textColor="@color/colorTextWhite"
            android:textFontWeight="900"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/topImageView"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/filmNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:includeFontPadding="false"
            android:text="@string/film_name"
            android:textColor="@color/colorStoryline"
            android:textFontWeight="900"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/ageTextView" />

        <TextView
            android:id="@+id/filmCategoriesTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/categories"
            android:textColor="@color/colorRedText"
            android:textFontWeight="300"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/filmNameTextView" />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="0dp"
            android:rating="2.2"
            android:stepSize="0.1"
            android:layout_height="wrap_content"
            style="?android:ratingBarStyleIndicator"
            android:theme="@style/MyRatingBar"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/filmCategoriesTextView"/>

        <TextView
            android:id="@+id/countReviewsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginTop="4dp"
            android:paddingStart="9dp"
            android:text="@string/count_reviews"
            android:textColor="@color/colorGrayText"
            android:textFontWeight="900"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toTopOf="@+id/rating"
            app:layout_constraintBottom_toBottomOf="@+id/rating"/>

        <TextView
            android:id="@+id/StorylineTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/name"
            android:textColor="@color/colorStoryline"
            android:textFontWeight="900"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <TextView
            android:id="@+id/filmStoryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:alpha="0.75"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="4sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe."
            android:textColor="@color/colorTextWhite"
            android:textFontWeight="300"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/StorylineTextView" />

        <TextView
            android:id="@+id/castTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="8sp"
            android:letterSpacing="-0.01"
            android:textColor="@color/colorTextWhite"
            android:textFontWeight="900"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/filmStoryTextView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detailRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@+id/castTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
